--- a/index.css
+++ b/index.css
@@ -5,6 +5,46 @@
 }
 
 body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 100vh;
     width: 100vw;
+    background-color: hsl(212, 45%, 89%);
+    font-family: 'Outfit', sans-serif;
+}
+
+.mainContainer{
+    display: flex;
+    flex-direction: column;
+    width: 280px;
+    border-radius: 20px;
+    background-color: hsl(0, 0%, 100%);
+    padding: 1rem 1rem 2rem 1rem;
+}
+
+img{
+    height: 60%;
+    width: 100%;
+    border-radius: 10px;
+}
+
+.textContainer{
+    padding: 0 0.5rem 0 0.5rem;
+}
+
+.textTittle{
+    margin-top: 1.2rem;
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: hsl(218, 44%, 22%);
+}
+
+.text{
+    text-align: center;
+    font-size: 0.85rem;
+    margin-top: 0.8rem;
+    color: hsl(220, 15%, 55%);
+    font-weight: 400;
 }
